baculum: Add VMware vSphere server list endpoint
